# tekoaly-soittolista-puristin

./: .env.example  .gitignore  CLAUDE.md  LETSBUILD.md  LICENSE  README.md  pyproject.toml
.claude/commands/: apis.md  build.md  checkpoint.md  discover.md  producer.md  soittolista.md  tutki.md
api/: discogs.py  finnish_charts.py  lastfm.py  listenbrainz.py  musicbrainz.py  sources.py  spotify.py  wikipedia.py  yle_areena.py
curator/: discover.py  genre_map.md  interviewer.py  playlist_builder.py
curator/philosophies/: INDEX.md  symphonic_poem.md
playlists/: keskiviikko_motorik_kosmos.py  paiva_tila_ajattelulle.py  tumma_sahko.py
scripts/: auth.py  build_playlist.py  discover_new.py
tools/: distill.py  fetch_doc.py
